<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".HomeActivity">
    <item android:id="@+id/action_past_hour" android:title="@string/action_past_hour"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_past_day" android:title="@string/action_past_day"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_past_week" android:title="@string/action_past_week"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_past_month" android:title="@string/action_past_month"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>