<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.nico.earthquake.Activity.SettingsActivity">


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/radioGroupEQ"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50px"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radioSignificant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/significant" />

                <RadioButton
                    android:id="@+id/radioAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all_earthquakes" />

                <RadioButton
                    android:id="@+id/radioM4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/m4" />

                <RadioButton
                    android:id="@+id/radioM2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/m2" />

                <RadioButton
                    android:id="@+id/radioM1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/m1" />
            </RadioGroup>

            <Button
                android:id="@+id/OK_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/OK" />

        </LinearLayout>
    </ScrollView>



</RelativeLayout>
